# docstring-guard

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docstring-checker/: Cargo.toml
src/: checker.rs  lib.rs  main.rs  utils.rs
src/python/: checker.rs  documentable.rs  mod.rs
src/python/fixtures/: test_no_docstring_in_classdef.py
src/python/tests/fixtures/: test_docstring_guard_ignore.py  test_docstring_not_first.py  test_no_docstring_in_funcdef.py  test_valid_docstring.py
src/rust/: checker.rs  documentable.rs  mod.rs
src/rust/tests/fixtures/: test_documented_fn.rs  test_documented_struct.rs  test_private_fn_skip.rs  test_private_struct_skip.rs  test_undocumented_fn.rs  test_undocumented_struct.rs
tests/: test.py
